Fix deprecated Mongoose options and prepare for Render deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,12 @@ NODE_ENV=development
 BACKEND_URL=http://localhost:5000
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/sales-automation
+# Local MongoDB:
+# MONGODB_URI=mongodb://localhost:27017/sales-automation
+
+# MongoDB Atlas (Cloud - Recommended):
+# Replace <password> with your actual password, remove < and >
+MONGODB_URI=mongodb+srv://salesautomation:<password>@cluster0.xxxxx.mongodb.net/sales-automation?retryWrites=true&w=majority
 
 # JWT Secret
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
@@ -14,8 +19,8 @@ FB_APP_ID=your_facebook_app_id
 FB_APP_SECRET=your_facebook_app_secret
 FB_WEBHOOK_VERIFY_TOKEN=your_webhook_verify_token
 
-# OpenAI API (for Global AI & Leo AI)
-OPENAI_API_KEY=your_openai_api_key_here
+# Groq API (for Global AI & Leo AI with Web Search)
+GROQ_API_KEY=your_groq_api_key_here
 
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
