--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "axios": "^1.6.2",
     "socket.io": "^4.6.0",
-    "openai": "^4.20.1",
+    "groq-sdk": "^0.7.0",
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
