Configure single service deployment for Render - backend serves frontend

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,5 @@
+# For local development (when backend runs separately on port 5000)
 VITE_API_URL=http://localhost:5000/api
+
+# For production (when backend serves frontend), leave empty or use /api
+# VITE_API_URL=/api
