--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
-  # Backend API Service
+  # Full Stack Application (Backend + Frontend)
   - type: web
-    name: sales-automation-backend
+    name: sales-automation-app
     runtime: node
     region: oregon
     plan: free
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm start
+    buildCommand: cd frontend && npm install && npm run build && cd ../backend && npm install
+    startCommand: cd backend && npm run start:prod
     envVars:
       - key: NODE_ENV
         value: production
@@ -16,8 +16,6 @@ services:
         sync: false
       - key: JWT_SECRET
         generateValue: true
-      - key: FRONTEND_URL
-        sync: false
       - key: FB_APP_ID
         sync: false
       - key: FB_APP_SECRET
@@ -27,19 +25,3 @@ services:
       - key: GROQ_API_KEY
         sync: false
     healthCheckPath: /api/health
-
-  # Frontend Static Site
-  - type: web
-    name: sales-automation-frontend
-    runtime: static
-    region: oregon
-    plan: free
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/dist
-    envVars:
-      - key: VITE_API_URL
-        sync: false
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
