Simplify deployment - Remove Facebook credentials requirement, only 3 env vars needed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,26 +1,38 @@
-# Server Configuration
-PORT=5000
-NODE_ENV=development
-BACKEND_URL=http://localhost:5000
+# ========================================
+# REQUIRED ENVIRONMENT VARIABLES
+# ========================================
 
-# Database
-# Local MongoDB:
-# MONGODB_URI=mongodb://localhost:27017/sales-automation
-
-# MongoDB Atlas (Cloud - Recommended):
-# Replace <password> with your actual password, remove < and >
+# Database (REQUIRED)
+# Get from: https://cloud.mongodb.com
 MONGODB_URI=mongodb+srv://salesautomation:<password>@cluster0.xxxxx.mongodb.net/sales-automation?retryWrites=true&w=majority
 
-# JWT Secret
+# JWT Secret (REQUIRED) - Any random 32+ character string
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
 
-# Facebook App Credentials
-FB_APP_ID=your_facebook_app_id
-FB_APP_SECRET=your_facebook_app_secret
-FB_WEBHOOK_VERIFY_TOKEN=your_webhook_verify_token
-
-# Groq API (for Global AI & Leo AI with Web Search)
+# Groq API (REQUIRED for AI features)
+# Get from: https://console.groq.com
 GROQ_API_KEY=your_groq_api_key_here
 
-# Frontend URL
+# ========================================
+# AUTO-SET IN PRODUCTION (Don't change)
+# ========================================
+
+PORT=5000
+NODE_ENV=development
+
+# ========================================
+# OPTIONAL - Only for Local Development
+# ========================================
+
+# Frontend URL (only needed for local dev with separate servers)
 FRONTEND_URL=http://localhost:5173
+
+# ========================================
+# OPTIONAL - Facebook Messenger Integration
+# Only add these if you want to connect Facebook Messenger
+# Get from: https://developers.facebook.com
+# ========================================
+
+# FB_APP_ID=your_facebook_app_id
+# FB_APP_SECRET=your_facebook_app_secret
+# FB_WEBHOOK_VERIFY_TOKEN=your_webhook_verify_token
