Add multi-tenant Facebook OAuth documentation - clarify app owner provides FB credentials for user OAuth

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,11 +28,13 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
 # ========================================
-# OPTIONAL - Facebook Messenger Integration
-# Only add these if you want to connect Facebook Messenger
+# OPTIONAL - Facebook Messenger OAuth
+# Add YOUR Facebook App credentials to enable multi-tenant OAuth
+# Users can then connect THEIR Facebook pages from Integrations
 # Get from: https://developers.facebook.com
+# See FACEBOOK_OAUTH_SETUP.md for detailed guide
 # ========================================
 
 # FB_APP_ID=your_facebook_app_id
 # FB_APP_SECRET=your_facebook_app_secret
-# FB_WEBHOOK_VERIFY_TOKEN=your_webhook_verify_token
+# FB_WEBHOOK_VERIFY_TOKEN=your_custom_verify_token
